--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vue-storefront/<% INTEGRATION %>",
+  "name": "@vue-storefront/bigcommerce",
   "version": "2.4.1",
   "private": true,
   "sideEffects": false,
@@ -16,7 +16,7 @@
     "update:update": "ncu -u"
   },
   "dependencies": {
-    "@vue-storefront/<% INTEGRATION %>-api": "~2.4.1",
+    "@vue-storefront/bigcommerce-api": "~2.4.1",
     "@vue-storefront/core": "~2.4.1"
   },
   "devDependencies": {
