--- a/.vuestorefrontcloud/docker/docs/Dockerfile
+++ b/.vuestorefrontcloud/docker/docs/Dockerfile
@@ -3,6 +3,9 @@ FROM node:14 AS build
 WORKDIR /var/www
 
 COPY . .
+RUN yarn install --network-concurrency 1
+RUN cd packages/api-client && yarn build && yarn cache clean --all
+RUN cd packages/composables && yarn build && yarn cache clean --all
 
 RUN cd docs \
   && npm install \
