--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,20 +75,8 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
-      - name: Build api-client
-        run: yarn build:api-client
+      - name: Build app
+        run: yarn build
 
-      - name: Test api-client
-        run: yarn test:api-client
-
-      - name: Build composables
-        run: yarn build:composables
-
-      - name: Test composables
-        run: yarn test:composables
-
-      - name: Build theme
-        run: yarn build:theme
-
-      - name: Test theme
-        run: yarn test:theme
+      - name: Test app
+        run: yarn test
