--- a/package.json
+++ b/package.json
@@ -2,34 +2,26 @@
   "name": "ecommerce-bigcommerce-integration",
   "private": true,
   "license": "MIT",
+  "repository": "https://github.com/vuestorefront/bigcommerce",
   "engines": {
     "node": ">=10.x"
   },
   "scripts": {
-    "build": "yarn build:api-client && yarn build:composables && yarn build:theme",
-    "build:api-client": "cd packages/api-client && yarn build",
-    "build:composables": "cd packages/composables && yarn build",
-    "build:theme": "cd packages/theme && yarn build",
+    "build": "lerna run build",
+    "dev": "lerna run dev --parallel",
+    "test": "lerna run test -- --passWithNoTests",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "dev": "concurrently \"yarn:dev:*\"",
-    "dev:api-client": "cd packages/api-client && yarn dev",
-    "dev:composables": "cd packages/composables && yarn dev",
-    "dev:theme": "cd packages/theme && yarn dev",
-    "docs:build": "cd docs && yarn build",
+    "docs:build": "lerna run build --ignore @vue-storefront/bigcommerce-theme && cd docs && yarn build",
     "docs:dev": "cd docs && yarn dev",
     "docs:install": "cd docs && yarn",
     "lint": "eslint . --ext .ts,.vue",
     "prepare": "[ -d '.husky' ] && (husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks) || true",
-    "publish:api-client": "node ./scripts/publishApi.js",
-    "publish:composables": "node ./scripts/publishComposable.js",
     "start": "cd packages/theme && yarn start",
-    "test": "yarn test:api-client && yarn test:composables && yarn test:theme",
-    "test:api-client": "cd packages/api-client && yarn test --passWithNoTests",
-    "test:composables": "cd packages/composables && yarn test --passWithNoTests",
-    "test:theme": "cd packages/theme && yarn test --passWithNoTests",
     "update:check": "ncu && lerna run update:check --stream",
-    "update:update": "ncu -u && lerna run update:update --stream"
+    "update:update": "ncu -u && lerna run update:update --stream",
+    "publish:patch": "lerna publish patch --yes --skip-npm --force-publish=*",
+    "publish:minor": "lerna publish minor --yes --skip-npm --force-publish=*"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -55,13 +47,14 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lerna": "^4.0.0",
+    "lerna-changelog": "^2.2.0",
     "lint-staged": "^11.1.2",
     "npm-check-updates": "^11.8.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.2",
-    "shx": "^0.3.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "shx": "^0.3.3",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "tslib": "^2.3.0",
