--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          npx lerna-changlog
+          npx lerna-changelog
           git add .
           git commit -m "chore: changelog ${{steps.set-next-ver.outputs.result}}"
           yarn release-stable --yes
@@ -51,7 +51,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          npx lerna-changlog
+          npx lerna-changelog
           git add .
           git commit -m "chore: changelog ${{steps.set-next-ver.outputs.result}}"
           yarn release-patch --yes
