feat: api client setup (#7)
* feat: adding bigcommerce node sdk

* feat: adding dotenv and bigcommerce sdk

* feat: adding configuration types

* feat: adding configuration for middleware

* feat: implementing sdk as a client

* chore: replacing require

* Revert "chore: replacing require"

This reverts commit 2a3f51ff28d4a8e082e0c13428fe7c4117d57492.

* chore: adding yarn lock

Co-authored-by: github-actions <github-actions@github.com>

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -22,12 +22,13 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
     "@storefront-ui/vue": "^0.10.8",
+    "@vue-storefront/bigcommerce": "~0.0.1",
     "@vue-storefront/middleware": "~2.4.3",
     "@vue-storefront/nuxt": "~2.4.3",
     "@vue-storefront/nuxt-theme": "~2.4.3",
-    "@vue-storefront/bigcommerce": "~0.0.1",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.16.1",
+    "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
     "nuxt-i18n": "^6.5.0",
     "vee-validate": "^3.4.11",
