feat: update git flow (#10)

--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -2,7 +2,7 @@ name: Deploy to Vue Storefront Cloud
 on:
   push:
     branches:
-    - main
+    - develop
 jobs:
   build:
     runs-on: ubuntu-latest
