--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,7 +95,10 @@
     ],
     "line-comment-position": 2,
     "linebreak-style": [2, "unix"],
-    "lines-around-comment": 2,
+    "padding-line-between-statements": [
+      2,
+      { "blankLine": "always", "prev": "multiline-block-like", "next": "*" }
+    ],
     "max-statements-per-line": 2,
     "no-lonely-if": 2,
     "prefer-const": 2,
@@ -138,6 +141,15 @@
       "files": ["*.ts", "*.tsx"],
       "rules": {
         "@typescript-eslint/explicit-module-boundary-types": ["error"]
+      }
+    },
+    {
+      "files": [
+        "./packages/api-client/src/types/**/*.ts",
+        "./packages/api-client/src/types/**/*.tsx"
+      ],
+      "rules": {
+        "camelcase": "off"
       }
     }
   ]
