feat: add createCustomer endpoint for register user (#17)
* feat: add Jest Watch Typeahead plugin and NPM script to run tests in watch mode

* feat: add createCustomer endpoint for register user

* fix: arrangements according to feedbacks

* chore: move '/customers' endpoint-specific types into its own folder

* chore: revert path change for API Extractor entry file

Co-authored-by: David Hargitai <david.hargitai@borngroup.com>

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -13,6 +13,7 @@
     "precommit": "lint-staged",
     "prepublish": "yarn build",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "update:check": "ncu",
     "update:update": "ncu -u"
   },
