--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,8 +73,7 @@
     "no-useless-return": 2,
     "no-console": 0,
     "global-require": 1,
-    "camelcase": 2,
-    "computed-property-spacing": 2,
+    "camelcase": [2, { "properties": "never" }],
     "consistent-this": 2,
     "func-call-spacing": 2,
     "func-names": 2,
