feat: getProducts api-client (#16)
* feat: getProducts api-client

* docs: docs for product types

* feat: add new tests for include param

* fix: type error

* chore: use contextMock for tests

* chore: restructure files

* fix: minor fixes

* feat: add new types

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@vue-storefront/core": "~2.4.3",
-    "node-bigcommerce": "^4.1.0"
+    "node-bigcommerce": "^4.1.0",
+    "query-string": "^7.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
