--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -145,7 +145,9 @@
     {
       "files": [
         "./packages/api-client/src/types/**/*.ts",
-        "./packages/api-client/src/types/**/*.tsx"
+        "./packages/api-client/src/types/**/*.tsx",
+        "./packages/api-client/**/*.spec.ts",
+        "./packages/api-client/**/*.mock.ts"
       ],
       "rules": {
         "camelcase": "off"
