--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -12,6 +12,7 @@
     "precommit": "lint-staged",
     "prepublish": "yarn build",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "update:check": "ncu",
     "update:update": "ncu -u"
   },
