--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -147,7 +147,8 @@
         "./packages/api-client/src/types/**/*.ts",
         "./packages/api-client/src/types/**/*.tsx",
         "./packages/api-client/**/*.spec.ts",
-        "./packages/api-client/**/*.mock.ts"
+        "./packages/api-client/**/*.mock.ts",
+        "./packages/composables/__mocks__/**/*.mock.ts"
       ],
       "rules": {
         "camelcase": "off"
