--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -40,6 +40,17 @@ jobs:
         target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
         environment: production
         initial_status: in_progress
+      env:
+        BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
+        BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
+        BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
+        BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
+        BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
+        BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
+        BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
+        BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
+        BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
+        BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
     - name: Deploy on demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
       if: github.ref == 'refs/heads/develop'
       run: |
