--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -28,6 +28,16 @@ jobs:
         NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
         NPM_USER: ${{ secrets.CLOUD_USERNAME }}
         NPM_REGISTRY: https://registrynpm.storefrontcloud.io
+        BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
+        BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
+        BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
+        BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
+        BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
+        BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
+        BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
+        BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
+        BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
+        BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
