fix: add env vars to deploy (#40)
* fix: add missing environment variables to workflow

* refactor: use env during build process

* fix: add env vars to buildargs

--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -22,7 +22,7 @@ jobs:
         password: ${{ secrets.CLOUD_PASSWORD }}
         dockerfile: .vuestorefrontcloud/docker/Dockerfile
         buildoptions: --compress
-        buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY
+        buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID
       env:
         NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
         NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
