fix: add env vars to deploy (#41)
* fix: add missing environment variables to workflow

* refactor: use env during build process

* fix: add env vars to buildargs

* fix: add buildargs to deploy step

--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -22,22 +22,7 @@ jobs:
         password: ${{ secrets.CLOUD_PASSWORD }}
         dockerfile: .vuestorefrontcloud/docker/Dockerfile
         buildoptions: --compress
-        buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID
-      env:
-        NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
-        NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
-        NPM_USER: ${{ secrets.CLOUD_USERNAME }}
-        NPM_REGISTRY: https://registrynpm.storefrontcloud.io
-        BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
-        BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
-        BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
-        BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
-        BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
-        BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
-        BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
-        BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
-        BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
-        BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
+        buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -50,6 +35,7 @@ jobs:
         target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
         environment: production
         initial_status: in_progress
+        buildargs: BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID
       env:
         BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
         BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
