--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -23,6 +23,11 @@ jobs:
         dockerfile: .vuestorefrontcloud/docker/Dockerfile
         buildoptions: --compress
         buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY
+      env:
+        NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
+        NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
+        NPM_USER: ${{ secrets.CLOUD_USERNAME }}
+        NPM_REGISTRY: https://registrynpm.storefrontcloud.io
   deploy:
     runs-on: ubuntu-latest
     needs: build
