feat: added useCategory composable (#21)
* Added category api endpoint

* Added api-client tests

* deleted categories  get.ts file

* feat: api-client category

* feat: api-client category

* feat: eslint changes

* feat: added useCategory composable

* feat: updated composables types

* feat: added category tree method to useCategory

* feat: updated method getCatLink on useUiHelpers

* feat: added useCategory to Category.vue

* feat: moved composable types to src\types\useCategory

* feat: added useUIHelpers composable

* feat: added breadcrumbs logic to useCategory

* feat: added /packages/theme/pages/ to eslintrc

* feat: added breadcrumbs logic to Category.vue

* feat(categorytree): added getCategoryTree method to api-client and added tests

* feat: added category helper and enhancers

* feat: added CategoryTree and useCategory composable

* feat: added buildBreadcrumbs helper

* feat: updated Category component

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: replaced useFacet with useSearch on Category.vue

* feat: added tests for helper methods in composables

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* fix: leave types only on eslintrc

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/cateogry-api

* feat: merge develop into feat/category-api

* feat: merge develop into feat/category-api

* feat: deleted bigcommerce.http file

* fix: merge develop into feat/category-api conflict

* feat: useCategory refactoring and improvements



--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -144,6 +144,8 @@
     },
     {
       "files": [
+        "./packages/**/src/types/**/*.ts",
+        "./packages/**/src/types/**/*.tsx",
         "./packages/api-client/src/types/**/*.ts",
         "./packages/api-client/src/types/**/*.tsx",
         "./packages/api-client/**/*.spec.ts",
