fix: add env vars to deploy (#46)
* fix: add missing environment variables to workflow

* refactor: use env during build process

* fix: add env vars to buildargs

* fix: add buildargs to deploy step

* fix: add npm env vars

* fix: add bigcommerce buildargs

* fix: add env vars to dockerfile

--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -5,6 +5,16 @@ ARG NPM_USER
 ARG NPM_PASS
 ARG NPM_EMAIL
 ARG NPM_REGISTRY
+ARG BIGCOMMERCE_API_CLIENT_ID
+ARG BIGCOMMERCE_API_CLIENT_SECRET
+ARG BIGCOMMERCE_API_URL
+ARG BIGCOMMERCE_API_ACCESS_TOKEN
+ARG BIGCOMMERCE_API_CLIENT_NAME
+ARG BIGCOMMERCE_STOREFRONT_API_TOKEN
+ARG BIGCOMMERCE_CHECKOUT_TYPE
+ARG BIGCOMMERCE_PAYMENT_URL
+ARG BIGCOMMERCE_CHANNEL_ID
+ARG BIGCOMMERCE_STORE_ID
 
 ENV LAST_COMMIT=${COMMIT}
 
