fix: add env vars to deploy (#50)
* fix: add missing environment variables to workflow

* refactor: use env during build process

* fix: add env vars to buildargs

* fix: add buildargs to deploy step

* fix: add npm env vars

* fix: add bigcommerce buildargs

* fix: add env vars to dockerfile

* fix: update dockerfile

* fix: update workflow and dockerfile

* fix: update workflow and dockerfile

* fix: update dockerfile

* fix: update dockerfile

--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -17,6 +17,16 @@ ARG BIGCOMMERCE_CHANNEL_ID
 ARG BIGCOMMERCE_STORE_ID
 
 ENV LAST_COMMIT=${COMMIT}
+ENV BIGCOMMERCE_API_CLIENT_ID=${BIGCOMMERCE_API_CLIENT_ID}
+ENV BIGCOMMERCE_API_CLIENT_SECRET=${BIGCOMMERCE_API_CLIENT_SECRET}
+ENV BIGCOMMERCE_API_URL=${BIGCOMMERCE_API_URL}
+ENV BIGCOMMERCE_API_ACCESS_TOKEN=${BIGCOMMERCE_API_ACCESS_TOKEN}
+ENV BIGCOMMERCE_API_CLIENT_NAME=${BIGCOMMERCE_API_CLIENT_NAME}
+ENV BIGCOMMERCE_STOREFRONT_API_TOKEN=${BIGCOMMERCE_STOREFRONT_API_TOKEN}
+ENV BIGCOMMERCE_CHECKOUT_TYPE=${BIGCOMMERCE_CHECKOUT_TYPE}
+ENV BIGCOMMERCE_PAYMENT_URL=${BIGCOMMERCE_PAYMENT_URL}
+ENV BIGCOMMERCE_CHANNEL_ID=${BIGCOMMERCE_CHANNEL_ID}
+ENV BIGCOMMERCE_STORE_ID=${BIGCOMMERCE_STORE_ID}
 
 RUN npm install -g npm-cli-login \
   && npm-cli-login
