--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -19,8 +19,12 @@
   },
   "dependencies": {
     "@vue-storefront/core": "~2.4.3",
+    "fetch-cookie": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "node-bigcommerce": "^4.1.0",
-    "query-string": "^7.0.1"
+    "node-fetch": "2",
+    "query-string": "^7.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
