feat: implement logIn method in useUser composable (#59)
* feat: implement logIn method in useUser composable

* feat: implement logIn method in useUser composable - updating staged-lint ignore on nuxt folder

* feat: implement logIn method in useUser composable  - uenvironment variables

* feat: implement login method in useUser composable - PR feedback

Co-authored-by: Stanislavs Cernisevs <stanislavs.cernisevs@borngroup.com>

--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -15,6 +15,10 @@ ARG BIGCOMMERCE_CHECKOUT_TYPE
 ARG BIGCOMMERCE_PAYMENT_URL
 ARG BIGCOMMERCE_CHANNEL_ID
 ARG BIGCOMMERCE_STORE_ID
+ARG BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID
+ARG BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET
+ARG BIGCOMMERCE_STORE_URL
+ARG BIGCOMMERCE_STORE_GUEST_TOKEN
 
 ENV LAST_COMMIT=${COMMIT}
 ENV BIGCOMMERCE_API_CLIENT_ID=${BIGCOMMERCE_API_CLIENT_ID}
@@ -27,6 +31,10 @@ ENV BIGCOMMERCE_CHECKOUT_TYPE=${BIGCOMMERCE_CHECKOUT_TYPE}
 ENV BIGCOMMERCE_PAYMENT_URL=${BIGCOMMERCE_PAYMENT_URL}
 ENV BIGCOMMERCE_CHANNEL_ID=${BIGCOMMERCE_CHANNEL_ID}
 ENV BIGCOMMERCE_STORE_ID=${BIGCOMMERCE_STORE_ID}
+ENV BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID=${BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID}
+ENV BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET=${BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET}
+ENV BIGCOMMERCE_STORE_URL=${BIGCOMMERCE_STORE_URL}
+ENV BIGCOMMERCE_STORE_GUEST_TOKEN=${BIGCOMMERCE_STORE_GUEST_TOKEN}
 
 RUN npm install -g npm-cli-login \
   && npm-cli-login
