--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -2,82 +2,86 @@ name: Deploy to Vue Storefront Cloud
 on:
   push:
     branches:
-    - develop
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v1
-    - name: Setup node
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-    - name: Build and publish docker image
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: demo-bigcommerce-storefrontcloud-io/vue-storefront:${{ github.sha }}
-        registry: registry.vuestorefront.cloud
-        username: ${{ secrets.CLOUD_USERNAME }}
-        password: ${{ secrets.CLOUD_PASSWORD }}
-        dockerfile: .vuestorefrontcloud/docker/Dockerfile
-        buildoptions: --compress
-        buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID
-      env:
-        NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
-        NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
-        NPM_USER: ${{ secrets.CLOUD_USERNAME }}
-        NPM_REGISTRY: https://registrynpm.storefrontcloud.io
-        BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
-        BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
-        BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
-        BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
-        BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
-        BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
-        BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
-        BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
-        BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
-        BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Build and publish docker image
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: demo-bigcommerce-storefrontcloud-io/vue-storefront:${{ github.sha }}
+          registry: registry.vuestorefront.cloud
+          username: ${{ secrets.CLOUD_USERNAME }}
+          password: ${{ secrets.CLOUD_PASSWORD }}
+          dockerfile: .vuestorefrontcloud/docker/Dockerfile
+          buildoptions: --compress
+          buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET,BIGCOMMERCE_STORE_URL,BIGCOMMERCE_STORE_GUEST_TOKEN
+        env:
+          NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
+          NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
+          NPM_USER: ${{ secrets.CLOUD_USERNAME }}
+          NPM_REGISTRY: https://registrynpm.storefrontcloud.io
+          BIGCOMMERCE_API_CLIENT_ID: ${{ secrets.BIGCOMMERCE_API_CLIENT_ID }}
+          BIGCOMMERCE_API_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_API_CLIENT_SECRET }}
+          BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
+          BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
+          BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
+          BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
+          BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
+          BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
+          BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
+          BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
+          BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID: ${{ secrets.BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID }}
+          BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET }}
+          BIGCOMMERCE_STORE_URL: ${{ secrets.BIGCOMMERCE_STORE_URL }}
+          BIGCOMMERCE_STORE_GUEST_TOKEN: ${{ secrets.BIGCOMMERCE_STORE_GUEST_TOKEN }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: chrnorm/deployment-action@releases/v1
-      name: Create GitHub deployment
-      id: deployment
-      with:
-        token: ${{ github.token }}
-        target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
-        environment: production
-        initial_status: in_progress
-    - name: Deploy on demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
-      if: github.ref == 'refs/heads/develop'
-      run: |
-        if curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '{
-            "code":"demo-bigcommerce",
-            "region":"europe-west1.gcp",
-            "frontContainerVersion":"${{ github.sha }}"
-          }' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
-          echo "Instance updated"
-        else
-          echo "Something went wrong during the update process..."
-          exit 1
-        fi
-    - name: Update deployment status (success)
-      if: success()
-      uses: chrnorm/deployment-status@releases/v1
-      with:
-        token: ${{ github.token }}
-        target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
-        state: success
-        description: Congratulations! The deploy is done.
-        deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-    - name: Update deployment status (failure)
-      if: failure()
-      uses: chrnorm/deployment-status@releases/v1
-      with:
-        token: ${{ github.token }}
-        target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
-        description: Unfortunately, the instance hasn't been updated.
-        state: failure
-        deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub deployment
+        id: deployment
+        with:
+          token: ${{ github.token }}
+          target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
+          environment: production
+          initial_status: in_progress
+      - name: Deploy on demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
+        if: github.ref == 'refs/heads/develop'
+        run: |
+          if curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '{
+              "code":"demo-bigcommerce",
+              "region":"europe-west1.gcp",
+              "frontContainerVersion":"${{ github.sha }}"
+            }' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
+            echo "Instance updated"
+          else
+            echo "Something went wrong during the update process..."
+            exit 1
+          fi
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
+          state: success
+          description: Congratulations! The deploy is done.
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: ${{ github.token }}
+          target_url: https://demo-bigcommerce.europe-west1.gcp.storefrontcloud.io
+          description: Unfortunately, the instance hasn't been updated.
+          state: failure
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
