--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "eslint-plugin-vue": "^7.16.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.3.1",
     "jest-watch-typeahead": "^1.0.0",
+    "jsdom": "^18.1.1",
     "lerna": "^4.0.0",
     "lerna-changelog": "^2.2.0",
     "lint-staged": "^11.1.2",
