--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -47,6 +47,6 @@
     "mochawesome": "^6.2.2",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "3.0.7"
   }
 }
