--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -24,6 +24,7 @@
     "node-bigcommerce": "^4.1.0",
     "node-fetch": "2",
     "query-string": "^7.0.1",
+    "set-cookie-parser": "^2.4.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
