--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
     "@nuxt/types": "^2.15.7",
+    "@types/jest": "^27.0.3",
     "@vue/test-utils": "^1.2.2",
     "babel-jest": "^27.0.6",
     "cypress": "^8.1.0",
