--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - develop
+      - qa
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -59,6 +60,19 @@ jobs:
         run: |
           if curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '{
               "code":"demo-bigcommerce",
+              "region":"europe-west1.gcp",
+              "frontContainerVersion":"${{ github.sha }}"
+            }' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
+            echo "Instance updated"
+          else
+            echo "Something went wrong during the update process..."
+            exit 1
+          fi
+      - name: Deploy on demo-bigcommerce-canary.europe-west1.gcp.storefrontcloud.io
+        if: github.ref == 'refs/heads/qa'
+        run: |
+          if curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '{
+              "code":"demo-bigcommerce-canary",
               "region":"europe-west1.gcp",
               "frontContainerVersion":"${{ github.sha }}"
             }' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
