--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -50,5 +50,9 @@
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.2.0",
     "vue-jest": "3.0.7"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
