--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,9 @@
   ],
   "command": {
     "publish": {
-      "message": "build: version %s",
-      "conventionalCommits": true
+      "message": "chore(release): %s",
+      "conventionalCommits": true,
+      "registry": "https://registry.npmjs.org/"
     }
   },
   "version": "0.0.1"
