--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -18,6 +18,7 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: demo-bigcommerce-storefrontcloud-io/vue-storefront:${{ github.sha }}
+          environment: production
           registry: registry.vuestorefront.cloud
           username: ${{ secrets.CLOUD_USERNAME }}
           password: ${{ secrets.CLOUD_PASSWORD }}
