chore: adding env variable for channel_id (#183)
* chore: adding env variable for channel_id

* chore: adding env variable for channel_id

--- a/packages/theme/.env.example
+++ b/packages/theme/.env.example
@@ -3,6 +3,7 @@ BIGCOMMERCE_API_CLIENT_SECRET=
 BIGCOMMERCE_API_URL=
 BIGCOMMERCE_API_ACCESS_TOKEN=
 BIGCOMMERCE_API_CLIENT_NAME=
+BIGCOMMERCE_CHANNEL_ID=
 BIGCOMMERCE_STORE_ID=
 BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID=
 BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET=
