--- a/.github/workflows/docs-deployment.yaml
+++ b/.github/workflows/docs-deployment.yaml
@@ -1,5 +1,8 @@
 name: Deploy Documentation
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -51,7 +54,20 @@ jobs:
           initial_status: in_progress
       - name: Deploy on docs.europe-west1.gcp.storefrontcloud.io/bigcommerce
         run: |
-          if curl -s -H 'X-User-Id: ${{ secrets.DOCS_CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.DOCS_CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '{"code":"docs","region":"europe-west1.gcp","additionalApps":{"apps":[{"name":"docs-v2-bigcommerce","tag":"${{ steps.get_version.outputs.VERSION }}","image":"registry.storefrontcloud.io/docs-storefrontcloud-io/v2-bigcommerce","path":"/bigcommerce","port":"80"}]}}' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
+          if curl -s -H 'X-User-Id: ${{ secrets.DOCS_CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.DOCS_CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X POST -d '
+            {
+              "code":"docs",
+              "region":"europe-west1.gcp",
+              "additionalApps":{
+                "apps":[{
+                  "name":"docs-v2-bigcommerce",
+                  "tag":"${{ steps.get_version.outputs.VERSION }}",
+                  "image":"registry.storefrontcloud.io/docs-storefrontcloud-io/v2-bigcommerce",
+                  "path":"/bigcommerce",
+                  "port":"80"
+                }]
+              }
+            }' https://farmer.storefrontcloud.io/instances | grep -q '{"code":200,"result":"Instance updated!"}'; then
             echo "Instance updated"
           else
             echo "Something went wrong during the update process..."
