--- a/packages/api-client/tsconfig.json
+++ b/packages/api-client/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
   "include": ["src"],
+  "exclude": ["node_modules", "lib"],
   "compilerOptions": {
-    "rootDir": "./src"
+    "lib": ["ESNext"],
+    "resolveJsonModule": true,
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationDir": "./lib",
+    "declarationMap": true,
+    "sourceMap": true
   }
 }
