--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
   "types": "lib/index.d.ts",
+  "license": "MIT",
   "scripts": {
     "build": "rimraf lib && rollup -c",
     "dev": "rollup -c -w",
@@ -17,15 +18,13 @@
   },
   "dependencies": {
     "@vue-storefront/bigcommerce-api": "^1.0.0-beta.2",
-    "@vue-storefront/core": "~2.4.3",
+    "@vue-storefront/core": "~2.5.4",
+    "@vue/composition-api": "^1.4.1",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "rollup-plugin-typescript2": "^0.30.0"
-  },
-  "peerDependencies": {
-    "@vue/composition-api": "1.0.0-beta.21"
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "rollup-plugin-typescript2": "^0.31.2"
   },
   "files": [
     "lib/**/*",
