--- a/packages/composables/tsconfig.json
+++ b/packages/composables/tsconfig.json
@@ -7,6 +7,8 @@
     "resolveJsonModule": true,
     "rootDir": "./src",
     "allowJs": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "declarationDir": "./lib",
+    "declarationMap": true
   }
 }
