--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-storefront/bigcommerce",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "sideEffects": false,
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
@@ -17,7 +17,7 @@
     "update:update": "ncu -u"
   },
   "dependencies": {
-    "@vue-storefront/bigcommerce-api": "^1.0.0-beta.2",
+    "@vue-storefront/bigcommerce-api": "^1.0.0",
     "@vue-storefront/core": "~2.5.4",
     "@vue/composition-api": "^1.4.1",
     "jsonwebtoken": "^8.5.1"
