--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@storefront-ui/vue": "^0.12.0",
     "@vue-storefront/bigcommerce": "^1.0.0",
+    "@vue-storefront/bigcommerce-api": "^1.0.0",
     "@vue-storefront/middleware": "~2.5.4",
     "@vue-storefront/nuxt": "~2.5.4",
     "@vue-storefront/nuxt-theme": "~2.5.4",
