--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -23,6 +23,7 @@
     "@bigcommerce/checkout-sdk": "^1.212.0",
     "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
     "@storefront-ui/vue": "^0.12.0",
@@ -31,11 +32,13 @@
     "@vue-storefront/middleware": "~2.5.4",
     "@vue-storefront/nuxt": "~2.5.4",
     "@vue-storefront/nuxt-theme": "~2.5.4",
+    "@vue-storefront/storyblok": "^0.3.0",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.21.0",
     "dotenv": "^15.0.0",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.5.0",
+    "storyblok-vue": "^1.0.5",
     "vee-validate": "^3.4.14",
     "vue-lazy-hydration": "~2.0.0-beta.4",
     "vue-scrollto": "^2.20.0"
