--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./lib",
     "esModuleInterop": true,
-    "target": "es5",
+    "target": "ES2020",
     "module": "ES2015",
     "moduleResolution": "node",
     "importHelpers": true,
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./",
-    "lib": ["es6", "es7", "ES2017", "ES2018", "ES2019", "dom"],
+    "lib": ["ES2020", "dom"],
     "strict": false,
     "preserveSymlinks": true,
     "resolveJsonModule": true
