--- a/.github/workflows/deploy-vue-storefront-cloud.yml
+++ b/.github/workflows/deploy-vue-storefront-cloud.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches:
       - develop
-      - qa
+  workflow_dispatch:
+
 jobs:
   build:
     environment: production
@@ -24,7 +25,7 @@ jobs:
           password: ${{ secrets.CLOUD_PASSWORD }}
           dockerfile: .vuestorefrontcloud/docker/Dockerfile
           buildoptions: --compress
-          buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_STOREFRONT_API_TOKEN,BIGCOMMERCE_CHECKOUT_TYPE,BIGCOMMERCE_PAYMENT_URL,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET,BIGCOMMERCE_STORE_URL,BIGCOMMERCE_STORE_GUEST_TOKEN
+          buildargs: NPM_EMAIL,NPM_PASS,NPM_USER,NPM_REGISTRY,BIGCOMMERCE_API_CLIENT_ID,BIGCOMMERCE_API_CLIENT_SECRET,BIGCOMMERCE_API_URL,BIGCOMMERCE_API_ACCESS_TOKEN,BIGCOMMERCE_API_CLIENT_NAME,BIGCOMMERCE_CHANNEL_ID,BIGCOMMERCE_STORE_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID,BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET,BIGCOMMERCE_STORE_URL,BIGCOMMERCE_STORE_GUEST_TOKEN,STORYBLOK_BIGCOMMERCE_DEMO_TOKEN
         env:
           NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
           NPM_PASS: ${{ secrets.CLOUD_PASSWORD }}
@@ -35,15 +36,13 @@ jobs:
           BIGCOMMERCE_API_URL: ${{ secrets.BIGCOMMERCE_API_URL }}
           BIGCOMMERCE_API_ACCESS_TOKEN: ${{ secrets.BIGCOMMERCE_API_ACCESS_TOKEN }}
           BIGCOMMERCE_API_CLIENT_NAME: ${{ secrets.BIGCOMMERCE_API_CLIENT_NAME }}
-          BIGCOMMERCE_STOREFRONT_API_TOKEN: ${{ secrets.BIGCOMMERCE_STOREFRONT_API_TOKEN }}
-          BIGCOMMERCE_CHECKOUT_TYPE: ${{ secrets.BIGCOMMERCE_CHECKOUT_TYPE }}
-          BIGCOMMERCE_PAYMENT_URL: ${{ secrets.BIGCOMMERCE_PAYMENT_URL }}
           BIGCOMMERCE_CHANNEL_ID: ${{ secrets.BIGCOMMERCE_CHANNEL_ID }}
           BIGCOMMERCE_STORE_ID: ${{ secrets.BIGCOMMERCE_STORE_ID }}
           BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID: ${{ secrets.BIGCOMMERCE_DEVTOOLS_APP_CLIENT_ID }}
           BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET: ${{ secrets.BIGCOMMERCE_DEVTOOLS_APP_CLIENT_SECRET }}
           BIGCOMMERCE_STORE_URL: ${{ secrets.BIGCOMMERCE_STORE_URL }}
           BIGCOMMERCE_STORE_GUEST_TOKEN: ${{ secrets.BIGCOMMERCE_STORE_GUEST_TOKEN }}
+          STORYBLOK_BIGCOMMERCE_DEMO_TOKEN: ${{ secrets.STORYBLOK_BIGCOMMERCE_DEMO_TOKEN }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
