--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -26,7 +26,7 @@
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@storefront-ui/vue": "^0.12.0",
+    "@storefront-ui/vue": "0.12.0",
     "@vue-storefront/bigcommerce": "^1.0.0",
     "@vue-storefront/bigcommerce-api": "^1.0.0",
     "@vue-storefront/middleware": "~2.5.4",
